// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MKeyVerificationRequestView > renders a timestamp 1`] = `
<div>
  <div
    class="EventTileBubble-module_container MKeyVerificationRequestView-module_content"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="EventTileBubble-module_title"
    >
      Alice wants to verify
    </div>
    <div
      class="EventTileBubble-module_subtitle"
    >
      Alice (@alice:example.org)
    </div>
    <span>
      14:56
    </span>
  </div>
</div>
`;

exports[`MKeyVerificationRequestView > renders the Received story 1`] = `
<div>
  <div
    class="EventTileBubble-module_container MKeyVerificationRequestView-module_content"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="EventTileBubble-module_title"
    >
      Alice wants to verify
    </div>
    <div
      class="EventTileBubble-module_subtitle"
    >
      Alice (@alice:example.org)
    </div>
  </div>
</div>
`;

exports[`MKeyVerificationRequestView > renders the SentByMe story 1`] = `
<div>
  <div
    class="EventTileBubble-module_container MKeyVerificationRequestView-module_content"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
      />
    </svg>
    <div
      class="EventTileBubble-module_title"
    >
      You sent a verification request
    </div>
    <div
      class="EventTileBubble-module_subtitle"
    >
      Bob (@bob:example.org)
    </div>
  </div>
</div>
`;
